# spark-le-custom-plugin

./: .gitignore  CMakeLists.txt  README.md
Source/: MidiHandler.cpp  MidiHandler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SequencerComponent.cpp  SequencerComponent.h
